deploy/dc.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: devnull
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: devnull
    spec:
      containers:
      - name: devnull-http
        image: devnull
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 0
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 0
          timeoutSeconds: 1
