deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devnull
  name: devnull
  namespace: devnull
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: devnull
  sessionAffinity: None
  type: ClusterIP
