deploy/route-dev.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: devnull
  name: devnull-cshouse
  namespace: devnull
spec:
  host: devnull.cs.house
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: devnull
    weight: 100
  wildcardPolicy: None
