deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: devnull
  name: devnull
  namespace: devnull
spec:
  host: devnull.csh.rit.edu
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: devnull
    weight: 100
  wildcardPolicy: None
